k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongo-deployment
  labels:
    app: mongo

spec:
  # how many pod to create using the template
  replicas: 1
  # all the pods that match this label, belong to this deployment
  selector:
    matchLabels:
      app: mongo
  # config for pod in this deployment
  template:
    metadata:
      # labels for pod, this is where service selector looks for label
      labels:
        app: mongo
    spec:
      containers:
        - name: mongodb
          image: mongo:5.0
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            # the port to access the application (mongo db) inside this pod
            - containerPort: 27017
