k8s/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  # the name of this service, endpoint to access this service network
  name: webapp-service
spec:
  # external service type
  type: NodePort
  # forward request to pod that has the label
  selector:
    app: webapp
  ports:
    # port to access this service
    - protocol: TCP
      # port to receive request
      port: 3000
      # port to forward request to
      # should be the same as the containerPort of pod in the deployment
      targetPort: 3000
      # port for external IP address to access this pod
      nodePort: 30100
