k8s/k8s-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  # forward request to dashboard.com to service kubernetes-dashboard
  - host: dashboard.com
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
